err/xenonmkv.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/XenonMKV-0.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xenonmkv'...
Compiling './lib/python3.5/site-packages/xenonmkv/batch.py'...
***   File "./lib/python3.5/site-packages/xenonmkv/batch.py", line 6
    print "Usage: {0} source_directory <xenonmkv_parameters>".format(sys.argv[0])
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xenonmkv/tests.py'...
***   File "./lib/python3.5/site-packages/xenonmkv/tests.py", line 28
    print "Test " + test + ": " + pf
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xenonmkv/utils'...
Compiling './lib/python3.5/site-packages/xenonmkv/utils/support_tools.py'...
***   File "./lib/python3.5/site-packages/xenonmkv/utils/support_tools.py", line 161
    print status,
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xenonmkv/xenonmkv.py'...
***   File "./lib/python3.5/site-packages/xenonmkv/xenonmkv.py", line 15
    print """You need to be running at least Python 2.7 to use this application.
 Install Python 2.7 using your package manager or download for
 your OS at http://www.python.org/getit/"""
                                                                                
                                                              
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
